- fixed an issue with losing the filter when you moved a column - fixed the focus problem where you could not move between filter fields - Fixed a problem with row selection not showing when you page down and then arrow up or down - improved the ability to resize a column - easier to select the resizer

--- a/src/uki-view/view/dataTable/dataTable.css
+++ b/src/uki-view/view/dataTable/dataTable.css
@@ -170,14 +170,14 @@ table.uki-dataTable-header tr.uki-dataTable-header-row td {
     display: none;
     overflow: hidden;
     position: absolute;
-    width: 5px;
+    width: 10px;
     top: 0;
     right: -12px;
     height: 100%;
     text-indent: 1em;
     cursor: ew-resize;
     cursor: col-resize;
-    padding-right: 4px;
+    padding-right: 2px;
 }
 
 
